--- a/jadwalpasaran.html
+++ b/jadwalpasaran.html
@@ -624,7 +624,7 @@
             {name: "KENTUCKY EVENING", days: "Senin s/d Minggu", tutup: "09:45 WIB", buka: "10:00 WIB", website: "https://www.kylottery.com/apps/", live: null, prizeType: "price1"},
             {name: "HOKI DRAW 10", days: "Senin s/d Minggu", tutup: "09:59 WIB", buka: "10:00 WIB", website: "https://hokidraw.com/", live: "https://kick.com/hokidraw", prizeType: "price1"},
             {name: "CAROLINA EVENING", days: "Senin s/d Minggu", tutup: "10:17 WIB", buka: "10:22 WIB", website: "https://www.wral.com/entertainment/lottery/", live: null, prizeType: "price1"},
-            {name: "TOTOCAMBODIA", days: "Senin s/d Minggu", tutup: "10:45 WIB", buka: "11:00 WIB", website: "https://totocambodialive.com/", live: "https://www.youtube.com/@TotoCambodiaOfficial/streams", prizeType: "price123"},
+            {name: "TOTOCAMBODIA", days: "Senin s/d Minggu", tutup: "10:45 WIB", buka: "11:00 WIB", website: "https://totocambodialive.com/", live: "https://kick.com/totocambodia", prizeType: "price123"},
             {name: "HOKI DRAW 11", days: "Senin s/d Minggu", tutup: "10:59 WIB", buka: "11:00 WIB", website: "https://hokidraw.com/", live: "https://kick.com/hokidraw", prizeType: "price1"},
             {name: "CHELSEA 11", days: "Senin s/d Minggu", tutup: "11:00 WIB", buka: "11:15 WIB", website: "https://chelseapools.co.uk/", live: null, prizeType: "price123"},
             {name: "OREGON 12", days: "Senin s/d Minggu", tutup: "11:50 WIB", buka: "12:00 WIB", website: "https://www.oregonlottery.org/pick-4/winning-numbers/", live: null, prizeType: "price1"},
