--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <i class="fas fa-coins"></i>
                 </div>
                 <div class="shortcut-name">Validasi Koin Depo WD</div>
-                <a href="https://shortcutpro.vercel.app/validasi-koin-depo.html" target="_blank" style="display: none;"></a>
+                <a href="https://shortcutpro.vercel.app/validasi-koin-depo-wd.html" target="_blank" style="display: none;"></a>
             </div>
             
             <!-- Selisih Qris -->
@@ -690,6 +690,7 @@
     </script>
 </body>
 </html>
+
 
 
 
