--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </div>
             
             <!-- Validasi Koin Depo WD-->
-            <div class="shortcut-item" data-name="validasi koin depo" data-category="finance">
+            <div class="shortcut-item" data-name="validasi koin depo wd" data-category="finance">
                 <div class="shortcut-icon">
                     <i class="fas fa-coins"></i>
                 </div>
@@ -690,6 +690,7 @@
     </script>
 </body>
 </html>
+
 
 
 
