Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -391,6 +391,15 @@
                 <div class="shortcut-name">Cek Batasan Line</div>
                 <a href="https://shortcutpro.vercel.app/batasanline.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- IP Login -->
+            <div class="shortcut-item" data-name="ip login" data-category="tools">
+                <div class="shortcut-icon">
+                    <i class="fas fa-user-shield"></i>
+                </div>
+                <div class="shortcut-name">IP Login</div>
+                <a href="https://shortcutpro.vercel.app/analisisiplogin.html" target="_blank" style="display: none;"></a>
+            </div>
             
             <!-- Reportan -->
             <div class="shortcut-item" data-name="reportan" data-category="tools">
@@ -690,6 +699,7 @@
     </script>
 </body>
 </html>
+
 
 
 
