--- a/index.html
+++ b/index.html
@@ -554,6 +554,15 @@
                 <a href="https://shortcutpro.vercel.app/generator-script-jp.html" target="_blank" style="display: none;"></a>
             </div>
 
+            <!-- Input Syair -->
+            <div class="shortcut-item" data-name="input syair" data-category="gaming">
+                <div class="shortcut-icon">
+                    <i class="fas fa-pen-fancy"></i>
+                </div>
+                <div class="shortcut-name">Input Syair</div>
+                <a href="https://shortcutpro.vercel.app/inputsyair.html" target="_blank" style="display: none;"></a>
+            </div>
+
             <!-- Gabungkan Gambar -->
             <div class="shortcut-item" data-name="gabungkan gambar" data-category="tools">
                 <div class="shortcut-icon">
@@ -699,6 +708,7 @@
     </script>
 </body>
 </html>
+
 
 
 
