--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <i class="fas fa-flag"></i>
                 </div>
                 <div class="shortcut-name">Reportan</div>
-                <a href="https://rebrand.ly/tv-x-zia" target="_blank" style="display: none;"></a>
+                <a href="https://shortcutpro.vercel.app/reportan.html" target="_blank" style="display: none;"></a>
             </div>
             
             <!-- Validasi Koin Depo WD-->
@@ -708,6 +708,7 @@
     </script>
 </body>
 </html>
+
 
 
 
