Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -427,6 +427,15 @@
                 <div class="shortcut-name">Selisih Qris</div>
                 <a href="https://shortcutpro.vercel.app/selisih-qris.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Selisih QRIS IDN -->
+            <div class="shortcut-item" data-name="selisih qris idn" data-category="finance">
+                <div class="shortcut-icon">
+                    <i class="fas fa-qrcode"></i>
+                </div>
+                <div class="shortcut-name">Selisih QRIS IDN</div>
+                <a href="https://shortcutpro.vercel.app/selisih-qris-idn.html" target="_blank" style="display: none;"></a>
+            </div>
             
             <!-- Hitung Togel PNG -->
             <div class="shortcut-item" data-name="hitung togel png" data-category="gaming">
@@ -708,6 +717,7 @@
     </script>
 </body>
 </html>
+
 
 
 
