--- a/winlose.html
+++ b/winlose.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winloss Calculator Pro</title>
+    <title>Winlose Calculator Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="text-center">
                         <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-black tracking-tight text-white bg-gradient-to-r from-red-400 via-yellow-400 to-red-400 bg-clip-text text-transparent break-words">
-                            𝐖𝐢𝐧𝐥𝐨𝐬𝐬 & 𝐁𝐨𝐧𝐮𝐬 𝐂𝐚𝐥𝐜𝐮𝐥𝐚𝐭𝐨𝐫
+                            𝐖𝐢𝐧𝐥𝐨𝐬e & 𝐁𝐨𝐧𝐮𝐬 𝐂𝐚𝐥𝐜𝐮𝐥𝐚𝐭𝐨𝐫
                         </h1>
                     </div>
                 </div>
@@ -241,9 +241,9 @@
 
         <!-- Tabs Navigation -->
         <nav class="glass rounded-lg sm:rounded-xl p-1.5 sm:p-2 flex gap-1.5 sm:gap-2 mb-4 sm:mb-6">
-            <button id="winlossTab" onclick="switchTab('winloss')" class="flex-1 px-2 py-2 sm:px-3 sm:py-2.5 md:px-6 md:py-3 rounded-lg font-semibold text-white transition-all duration-300 flex items-center justify-center gap-1.5 sm:gap-2 text-xs sm:text-sm tab-active">
+            <button id="winloseTab" onclick="switchTab('winlose')" class="flex-1 px-2 py-2 sm:px-3 sm:py-2.5 md:px-6 md:py-3 rounded-lg font-semibold text-white transition-all duration-300 flex items-center justify-center gap-1.5 sm:gap-2 text-xs sm:text-sm tab-active">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" x2="12" y1="2" y2="22"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
-                <span>Winloss</span>
+                <span>Winlose</span>
             </button>
             <button id="bonusTab" onclick="switchTab('bonus')" class="flex-1 px-2 py-2 sm:px-3 sm:py-2.5 md:px-6 md:py-3 rounded-lg font-semibold text-white hover:bg-slate-700/50 transition-all duration-300 flex items-center justify-center gap-1.5 sm:gap-2 text-xs sm:text-sm">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
@@ -302,8 +302,8 @@
             </div>
         </section>
 
-        <!-- Winloss Calculator Tab Content -->
-        <main id="winlossContent" class="space-y-3 sm:space-y-4 md:space-y-6">
+        <!-- Winlose Calculator Tab Content -->
+        <main id="winloseContent" class="space-y-3 sm:space-y-4 md:space-y-6">
             <div class="grid grid-cols-1 xl:grid-cols-2 gap-3 sm:gap-4 md:gap-6">
                 
                 <!-- Input Form -->
@@ -742,21 +742,21 @@
 
         // --- TAB SWITCHING ---
         function switchTab(tab) {
-            const winlossTab = document.getElementById('winlossTab');
+            const winloseTab = document.getElementById('winloseTab');
             const bonusTab = document.getElementById('bonusTab');
-            const winlossContent = document.getElementById('winlossContent');
+            const winloseContent = document.getElementById('winloseContent');
             const bonusContent = document.getElementById('bonusContent');
             
-            if (tab === 'winloss') {
-                winlossTab.classList.add('tab-active');
+            if (tab === 'winlose') {
+                winloseTab.classList.add('tab-active');
                 bonusTab.classList.remove('tab-active');
-                winlossContent.classList.remove('hidden');
+                winloseContent.classList.remove('hidden');
                 bonusContent.classList.add('hidden');
             } else {
                 bonusTab.classList.add('tab-active');
-                winlossTab.classList.remove('tab-active');
+                winloseTab.classList.remove('tab-active');
                 bonusContent.classList.remove('hidden');
-                winlossContent.classList.add('hidden');
+                winloseContent.classList.add('hidden');
             }
         }
 
