--- a/index.html
+++ b/index.html
@@ -589,6 +589,15 @@
                 <div class="shortcut-name">Peminjaman Pengembalian</div>
                 <a href="https://shortcutpro.vercel.app/peminjaman-pengembalian.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Winlose -->
+            <div class="shortcut-item" data-name="winlose" data-category="gaming">
+                <div class="shortcut-icon">
+                    <i class="fas fa-trophy"></i>
+                </div>
+                <div class="shortcut-name">Winlose</div>
+                <a href="https://shortcutpro.vercel.app/winlose.html" target="_blank" style="display: none;"></a>
+            </div>
             
         </div>
     </div>
@@ -717,6 +726,7 @@
     </script>
 </body>
 </html>
+
 
 
 
