--- a/peminjaman-pengembalian.html
+++ b/peminjaman-pengembalian.html
@@ -1041,7 +1041,7 @@ Dan berbagai format lainnya!"></textarea>
                     <img src="https://i.postimg.cc/6TpyCYFW/download-(14).png" alt="Corner TR">
                 </div>
                 <div class="corner-ornament bl">
-                    <img src="https://i.postimg.cc/Wt1h0Xxb/download-(15).png" alt="Corner BL">
+                    <img src="https://i.postimg.cc/Qtj9X8SH/download-(16).png" alt="Corner BL">
                 </div>
                 <div class="corner-ornament br">
                     <img src="https://i.postimg.cc/JtzGjPSz/download-(16).png" alt="Corner BR">
