--- a/index.html
+++ b/index.html
@@ -657,6 +657,14 @@
                 <h2 class="shortcut__name">Validasi Koin Depo WD</h2>
             </article>
             
+            <!-- Data TO -->
+            <article class="shortcut" data-name="data to" data-category="finance" data-url="https://shortcutpro.vercel.app/data-to.html">
+                <div class="shortcut__icon" aria-hidden="true">
+                    <i class="fas fa-database"></i>
+                </div>
+                <h2 class="shortcut__name">Data TO</h2>
+            </article>
+            
             <!-- Selisih Qris -->
             <article class="shortcut" data-name="selisih qris" data-category="finance" data-url="https://shortcutpro.vercel.app/selisih-qris.html">
                 <div class="shortcut__icon" aria-hidden="true">
