--- a/selisih-qris-idn.html
+++ b/selisih-qris-idn.html
@@ -763,8 +763,8 @@
 Format P2MIH: reference_no (kolom 2), amount (kolom 3), remark/user ID (kolom 16)
 Format MINERA: Order ID (kolom 4), Amount (kolom 6), User ID (kolom 12)" oninput="updateStatus()"></textarea>
                 <div class="info-box">
-                    <i class="fas fa-info-circle"></i> <strong>Format QRIS P2MIH:</strong> reference_no (kolom 2), amount (kolom 3), remark (kolom 16)<br>
-                    <strong>Format QRIS MINERA:</strong> Order ID (kolom 4), Amount (kolom 6), User ID (kolom 12)
+                    <i class="fas fa-info-circle"></i> <strong>Format QRIS MINERA:</strong> reference_no (kolom 2), amount (kolom 3), remark (kolom 16)<br>
+                    <strong>Format QRIS P2MIH:</strong> Order ID (kolom 4), Amount (kolom 6), User ID (kolom 12)
                 </div>
             </div>
         </div>
