--- a/reportan.html
+++ b/reportan.html
@@ -77,7 +77,7 @@
       line-height: 1.6;
       overflow: hidden;
       position: relative;
-      background: url('https://statics.hokibagus.club/tvtoto/background/tvtoto_backgroundweb.png') no-repeat center center fixed;
+      background: url('https://cdn.areabermain.club/assets/cdn/az2/2026/01/17/20260117/d50e4d927a48f8e4903cd526118e4fb5/new-background-tvtoto.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
