--- a/scriptbola.html
+++ b/scriptbola.html
@@ -31,7 +31,7 @@
             font-family: 'Rajdhani', sans-serif;
             background: 
                 linear-gradient(135deg, rgba(10, 10, 15, 0.85), rgba(21, 21, 32, 0.85)),
-                url('https://statics.hokibagus.club/tvtoto/background/tvtoto_backgroundweb.png');
+                url('https://cdn.areabermain.club/assets/cdn/az2/2026/01/17/20260117/d50e4d927a48f8e4903cd526118e4fb5/new-background-tvtoto.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -1133,7 +1133,7 @@ DENMARK 1ST DIV
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, rgba(153, 0, 0, 0.85), rgba(102, 0, 0, 0.85)), url('https://statics.hokibagus.club/tvtoto/background/tvtoto_backgroundweb.png');
+      background: linear-gradient(135deg, rgba(153, 0, 0, 0.85), rgba(102, 0, 0, 0.85)), url('https://cdn.areabermain.club/assets/cdn/az2/2026/01/17/20260117/d50e4d927a48f8e4903cd526118e4fb5/new-background-tvtoto.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
