--- a/inputsyair.html
+++ b/inputsyair.html
@@ -15,7 +15,7 @@
         body {
             padding: 20px;
             background: linear-gradient(135deg, rgba(26, 0, 0, 0.85) 0%, rgba(64, 0, 0, 0.85) 100%), 
-                        url('https://statics.hokibagus.club/tvtoto/background/tvtoto_backgroundweb.png');
+                        url('https://cdn.areabermain.club/assets/cdn/az2/2026/01/17/20260117/d50e4d927a48f8e4903cd526118e4fb5/new-background-tvtoto.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
