--- a/jadwalpasaran.html
+++ b/jadwalpasaran.html
@@ -7,12 +7,12 @@
     <title>Jadwal Togel</title>
     <style>
         :root {
-            --red-primary: #990000;
-            --red-light: #cc3333;
-            --red-dark: #660000;
-            --red-gradient: linear-gradient(135deg, #990000, #cc3333, #ff4444, #660000);
-            --red-glow: 0 0 20px rgba(153, 0, 0, 0.5);
-            --red-accent: #ff4444;
+            --gold-primary: #D4AF37;
+            --gold-light: #F4D03F;
+            --gold-dark: #B8860B;
+            --gold-gradient: linear-gradient(135deg, #B8860B, #D4AF37, #F4D03F, #8B7500);
+            --gold-glow: 0 0 20px rgba(212, 175, 55, 0.5);
+            --gold-accent: #FFD700;
             --green-primary: #2d7a2d;
             --green-light: #51cf66;
             --green-dark: #1a5c1a;
@@ -22,7 +22,7 @@
             --bg-card: #252525;
             --text-light: #f8f8f8;
             --text-secondary: #cccccc;
-            --shadow-red: 0 4px 15px rgba(153, 0, 0, 0.3);
+            --shadow-gold: 0 4px 15px rgba(212, 175, 55, 0.3);
             --shadow-green: 0 4px 15px rgba(45, 122, 45, 0.3);
         }
 
@@ -37,7 +37,7 @@
             background-color: var(--bg-dark);
             color: var(--text-light);
             padding: 20px;
-            background-image: url('https://cdn.areabermain.club/assets/cdn/az2/2026/01/17/20260117/d50e4d927a48f8e4903cd526118e4fb5/new-background-tvtoto.jpg');
+            background-image: url('https://cdn.areabermain.club/assets/cdn/az5/2026/02/03/20260203/d8632a0c7c9125ef1a67069b11b5a102/background-imlek-hokbentoto.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -63,7 +63,7 @@
 
         .header h1 {
             font-size: 2.5rem;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -77,7 +77,7 @@
             display: block;
             width: 150px;
             height: 3px;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             margin: 15px auto;
             border-radius: 3px;
         }
@@ -93,16 +93,16 @@
 
         .date-box, .time-box {
             background: var(--bg-card);
-            border: 2px solid rgba(153, 0, 0, 0.3);
+            border: 2px solid rgba(212, 175, 55, 0.3);
             border-radius: 12px;
             padding: 15px 30px;
-            box-shadow: var(--shadow-red);
+            box-shadow: var(--shadow-gold);
             transition: all 0.3s ease;
         }
 
         .date-box:hover, .time-box:hover {
-            border-color: var(--red-primary);
-            box-shadow: 0 8px 25px rgba(153, 0, 0, 0.4);
+            border-color: var(--gold-primary);
+            box-shadow: 0 8px 25px rgba(212, 175, 55, 0.4);
             transform: translateY(-2px);
         }
 
@@ -126,7 +126,7 @@
         .date-value {
             font-size: 1.3rem;
             font-weight: 700;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -137,17 +137,17 @@
             font-size: 2rem;
             font-weight: 700;
             font-family: 'Courier New', monospace;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
             letter-spacing: 2px;
-            text-shadow: 0 0 20px rgba(153, 0, 0, 0.3);
+            text-shadow: 0 0 20px rgba(212, 175, 55, 0.3);
         }
 
         .timezone {
             font-size: 0.85rem;
-            color: var(--red-light);
+            color: var(--gold-light);
             margin-top: 5px;
             font-weight: 600;
         }
@@ -213,13 +213,13 @@
             background: var(--bg-card);
             padding: 12px 20px;
             border-radius: 8px;
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         .alarm-toggle:hover {
-            background: rgba(153, 0, 0, 0.1);
+            background: rgba(212, 175, 55, 0.1);
         }
 
         .alarm-icon {
@@ -252,7 +252,7 @@
             height: 4px;
             -webkit-appearance: none;
             appearance: none;
-            background: rgba(153, 0, 0, 0.3);
+            background: rgba(212, 175, 55, 0.3);
             outline: none;
             border-radius: 2px;
         }
@@ -262,7 +262,7 @@
             appearance: none;
             width: 12px;
             height: 12px;
-            background: var(--red-primary);
+            background: var(--gold-primary);
             cursor: pointer;
             border-radius: 50%;
         }
@@ -270,7 +270,7 @@
         .volume-slider::-moz-range-thumb {
             width: 12px;
             height: 12px;
-            background: var(--red-primary);
+            background: var(--gold-primary);
             cursor: pointer;
             border-radius: 50%;
             border: none;
@@ -342,18 +342,18 @@
             width: 100%;
             padding: 14px 20px 14px 45px;
             background: var(--bg-card);
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             border-radius: 8px;
             color: var(--text-light);
             font-size: 1rem;
-            box-shadow: var(--shadow-red);
+            box-shadow: var(--shadow-gold);
             transition: all 0.3s ease;
         }
 
         .search-box:focus {
             outline: none;
-            border-color: var(--red-primary);
-            box-shadow: 0 0 0 3px rgba(153, 0, 0, 0.2);
+            border-color: var(--gold-primary);
+            box-shadow: 0 0 0 3px rgba(212, 175, 55, 0.2);
         }
 
         .search-icon {
@@ -361,7 +361,7 @@
             left: 15px;
             top: 50%;
             transform: translateY(-50%);
-            color: var(--red-primary);
+            color: var(--gold-primary);
         }
 
         .filter-buttons {
@@ -372,7 +372,7 @@
         .filter-btn {
             padding: 12px 20px;
             background: var(--bg-card);
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             border-radius: 8px;
             color: var(--text-light);
             font-size: 0.9rem;
@@ -382,13 +382,13 @@
         }
 
         .filter-btn:hover {
-            background: var(--red-primary);
-            border-color: var(--red-primary);
+            background: var(--gold-primary);
+            border-color: var(--gold-primary);
         }
 
         .filter-btn.active {
-            background: var(--red-gradient);
-            border-color: var(--red-primary);
+            background: var(--gold-gradient);
+            border-color: var(--gold-primary);
             font-weight: 600;
         }
 
@@ -404,9 +404,9 @@
             background: var(--bg-card);
             border-radius: 12px;
             overflow: hidden;
-            box-shadow: var(--shadow-red);
+            box-shadow: var(--shadow-gold);
             transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
-            border: 1px solid rgba(153, 0, 0, 0.2);
+            border: 1px solid rgba(212, 175, 55, 0.2);
             position: relative;
         }
 
@@ -417,7 +417,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             transition: background 0.3s ease;
         }
 
@@ -436,7 +436,7 @@
         }
 
         .ttg-card:not(.done):hover {
-            box-shadow: 0 12px 30px rgba(153, 0, 0, 0.4), var(--red-glow);
+            box-shadow: 0 12px 30px rgba(212, 175, 55, 0.4), var(--gold-glow);
         }
 
         .ttg-card.done:hover {
@@ -448,8 +448,8 @@
             font-weight: 600;
             padding: 15px 20px;
             background: rgba(212, 175, 55, 0.1);
-            border-bottom: 1px solid rgba(153, 0, 0, 0.2);
-            color: var(--red-light);
+            border-bottom: 1px solid rgba(212, 175, 55, 0.2);
+            color: var(--gold-light);
             text-align: center;
             transition: all 0.3s ease;
             display: flex;
@@ -474,7 +474,7 @@
             padding: 10px 15px;
             background: rgba(255, 255, 255, 0.05);
             border-radius: 8px;
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             min-height: 45px;
         }
 
@@ -491,7 +491,7 @@
             font-size: 1.1rem;
             font-weight: 700;
             font-family: 'Courier New', monospace;
-            color: var(--red-accent);
+            color: var(--gold-accent);
             letter-spacing: 1px;
         }
 
@@ -512,7 +512,7 @@
         }
 
         .copy-icon-btn:hover {
-            background: rgba(153, 0, 0, 0.2);
+            background: rgba(212, 175, 55, 0.2);
             transform: scale(1.1);
         }
 
@@ -523,7 +523,7 @@
         .copy-icon-btn svg {
             width: 20px;
             height: 20px;
-            stroke: var(--red-light);
+            stroke: var(--gold-light);
             transition: stroke 0.3s ease;
         }
 
@@ -538,21 +538,21 @@
         .countdown-timer {
             font-size: 1.1rem;
             font-weight: 700;
-            color: var(--red-accent);
+            color: var(--gold-accent);
             font-family: 'Courier New', monospace;
             letter-spacing: 2px;
             text-shadow: 0 0 10px rgba(255, 68, 68, 0.5);
             padding: 8px 15px;
-            background: rgba(153, 0, 0, 0.15);
+            background: rgba(212, 175, 55, 0.15);
             border-radius: 6px;
             border: 1px solid rgba(255, 68, 68, 0.3);
             transition: all 0.3s ease;
         }
 
         .countdown-timer.phase-countdown {
-            color: var(--red-accent);
+            color: var(--gold-accent);
             border-color: rgba(255, 68, 68, 0.3);
-            background: rgba(153, 0, 0, 0.15);
+            background: rgba(212, 175, 55, 0.15);
             text-shadow: 0 0 10px rgba(255, 68, 68, 0.5);
         }
 
@@ -629,7 +629,7 @@
             width: 18px;
             height: 18px;
             margin-right: 8px;
-            color: var(--red-primary);
+            color: var(--gold-primary);
             transition: color 0.3s ease;
         }
 
@@ -643,7 +643,7 @@
         }
 
         .ttg-card__value--tutup {
-            color: #ff6b6b;
+            color: #F4D03F;
         }
 
         .ttg-card__value--buka {
@@ -661,7 +661,7 @@
         .ttg-card__site a {
             flex: 1;
             padding: 8px 12px;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             color: var(--bg-dark);
             text-decoration: none;
             border-radius: 4px;
@@ -683,7 +683,7 @@
         .input-section {
             padding: 15px 20px;
             background: rgba(0, 0, 0, 0.3);
-            border-top: 1px solid rgba(153, 0, 0, 0.2);
+            border-top: 1px solid rgba(212, 175, 55, 0.2);
         }
 
         .ttg-card.done .input-section {
@@ -706,7 +706,7 @@
             width: 100%;
             padding: 8px 12px;
             background: var(--bg-dark);
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             border-radius: 4px;
             color: var(--text-light);
             font-size: 0.9rem;
@@ -720,7 +720,7 @@
 
         .input-group input:focus {
             outline: none;
-            border-color: var(--red-primary);
+            border-color: var(--gold-primary);
         }
 
         .ttg-card.done .input-group input:focus {
@@ -755,7 +755,7 @@
         }
 
         .btn-copy {
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             color: var(--bg-dark);
         }
 
@@ -807,12 +807,12 @@
             border-radius: 12px;
             max-width: 500px;
             width: 90%;
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
         }
 
         .modal-header {
             font-size: 1.5rem;
-            color: var(--red-light);
+            color: var(--gold-light);
             margin-bottom: 20px;
             text-align: center;
         }
@@ -844,7 +844,7 @@
         }
 
         .btn-modal-copy {
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             color: var(--bg-dark);
         }
 
@@ -887,7 +887,7 @@
         }
 
         .toast-notification.error {
-            background: linear-gradient(135deg, #cc0000, #ff4444);
+            background: linear-gradient(135deg, #D4AF37, #F4D03F);
         }
 
         .toast-notification.info {
@@ -962,7 +962,7 @@
 
         .comparison-header {
             background: var(--bg-card);
-            border: 2px solid rgba(153, 0, 0, 0.3);
+            border: 2px solid rgba(212, 175, 55, 0.3);
             border-radius: 8px 8px 0 0;
             padding: 8px 12px;
             display: flex;
@@ -979,7 +979,7 @@
         .comparison-title {
             font-size: 0.85rem;
             font-weight: 700;
-            color: var(--red-light);
+            color: var(--gold-light);
             display: flex;
             align-items: center;
             gap: 6px;
@@ -996,7 +996,7 @@
 
         .comparison-content {
             background: var(--bg-card);
-            border: 2px solid rgba(153, 0, 0, 0.3);
+            border: 2px solid rgba(212, 175, 55, 0.3);
             border-top: none;
             border-radius: 0 0 8px 8px;
             max-height: 500px;
@@ -1015,7 +1015,7 @@
             max-height: 120px;
             padding: 8px;
             background: var(--bg-dark);
-            border: 1px solid rgba(153, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.3);
             border-radius: 0;
             color: var(--text-light);
             font-size: 0.7rem;
@@ -1026,7 +1026,7 @@
         }
 
         .comparison-textarea:focus {
-            border-color: var(--red-primary);
+            border-color: var(--gold-primary);
         }
 
         .comparison-textarea::placeholder {
@@ -1044,7 +1044,7 @@
         .btn-compare {
             flex: 1;
             padding: 6px 8px;
-            background: var(--red-gradient);
+            background: var(--gold-gradient);
             color: var(--bg-dark);
             border: none;
             border-radius: 4px;
@@ -1094,12 +1094,12 @@
         }
 
         .comparison-table-wrapper::-webkit-scrollbar-thumb {
-            background: var(--red-primary);
+            background: var(--gold-primary);
             border-radius: 2px;
         }
 
         .comparison-table-wrapper::-webkit-scrollbar-thumb:hover {
-            background: var(--red-light);
+            background: var(--gold-light);
         }
 
         .comparison-table {
@@ -1120,7 +1120,7 @@
             text-align: left;
             font-size: 0.6rem;
             color: var(--text-secondary);
-            border-bottom: 2px solid rgba(153, 0, 0, 0.3);
+            border-bottom: 2px solid rgba(212, 175, 55, 0.3);
             font-weight: 600;
             text-transform: uppercase;
             white-space: nowrap;
@@ -1191,7 +1191,7 @@
         }
 
         .match-different {
-            color: #ff6b6b;
+            color: #F4D03F;
         }
 
         .match-empty {
@@ -1212,7 +1212,7 @@
             display: flex;
             justify-content: space-around;
             font-size: 0.65rem;
-            border-top: 1px solid rgba(153, 0, 0, 0.3);
+            border-top: 1px solid rgba(212, 175, 55, 0.3);
         }
 
         .stat-item {
@@ -1236,7 +1236,7 @@
         }
 
         .stat-value.red {
-            color: #ff6b6b;
+            color: #F4D03F;
         }
 
         .stat-value.gray {
@@ -2142,13 +2142,13 @@
                 background: #252525;
                 padding: 30px;
                 border-radius: 12px;
-                border: 2px solid #cc3333;
+                border: 2px solid #D4AF37;
                 max-width: 400px;
                 text-align: center;
             `;
             
             content.innerHTML = `
-                <h3 style="color: #cc3333; margin-bottom: 20px;">Copy Manual</h3>
+                <h3 style="color: #D4AF37; margin-bottom: 20px;">Copy Manual</h3>
                 <p style="color: #cccccc; margin-bottom: 15px;">Silakan copy angka berikut:</p>
                 <input type="text" value="${text}" readonly 
                     style="width: 100%; padding: 15px; font-size: 1.2rem; font-weight: bold; 
@@ -2156,7 +2156,7 @@
                     border-radius: 8px; margin-bottom: 20px; font-family: 'Courier New', monospace;"
                     onclick="this.select()" id="copyInput">
                 <button onclick="this.closest('.copy-manual-modal').remove()" 
-                    style="padding: 12px 30px; background: #cc3333; color: white; border: none; 
+                    style="padding: 12px 30px; background: #D4AF37; color: white; border: none; 
                     border-radius: 8px; font-weight: 600; cursor: pointer; font-size: 1rem;">
                     Tutup
                 </button>
